<resources>
    <string name="app_name" translatable="false">TestTask</string>

    <string name="menu_quotes">Quotes</string>
    <string name="menu_products">Products</string>
    <string name="menu_product_details">Product details</string>
    <string name="menu_settings">Settings</string>

    <string name="hint_url">Server address</string>
    <string name="btn_test_connection">Test connection</string>
    <string name="btn_save_url">Save address</string>
    <string name="message_connection_success">Connection successful</string>
    <string name="message_connection_error">Connection failure</string>
    <string name="message_error_getting_quotes">Failed to retrieve quotes</string>
    <string name="message_error_getting_products">Failed to retrieve products</string>
    <string name="message_product_is_null">Product not found</string>
</resources>