<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_quotes">

    <fragment
        android:id="@+id/nav_quotes"
        android:name="com.example.testtask.ui.quotes.QuotesFragment"
        android:label="@string/menu_quotes"
        tools:layout="@layout/fragment_quotes" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.testtask.ui.product.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products">
        <action
            android:id="@+id/action_nav_products_to_nav_product_details"
            app:destination="@id/nav_product_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_product_details"
        android:name="com.example.testtask.ui.product.ProductDetailsFragment"
        android:label="@string/menu_product_details"
        tools:layout="@layout/fragment_product_details" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.testtask.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>